--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
 language: python
+
+python:
+    - 3.3
+    - 3.4
+    - 3.5
+    - 3.6
+
+install:
+    - python3 setup.py install --user
+
+script:
+    - pytest
