Testing travis-sphinx

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ install:
     - python3 setup.py install --user
 
 script:
-    - pytest
+    - travis-sphinx build
+    
+after_success:
+    - travis-sphinx deploy
