--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
     - 3.6
 
 install:
-    - python3 setup.py install --user
+    - pip3 install -r requirements.txt
 
 script:
     - travis-sphinx build
