--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,7 @@ python:
     - 3.6
 
 install:
-    - pip3 install -r requirements.txt
+    - pip3 install -r requirements-dev.txt
 
 script:
-    - travis-sphinx build
-    
-after_success:
-    - travis-sphinx deploy
+    - pytest
