--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ python:
     - 3.6
 
 install:
-    - pip3 install -r requirements-dev.txt
+    - pip3 install -r requirements-dev.txt --user
 
 script:
-    - pytest
+    - travis-sphinx build
+
+after_success:
+    - travis-sphinx deploy
