--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ python:
     - 3.6
 
 install:
-    - pip3 install -r requirements-dev.txt --user
+    - pip3 install -r requirements-dev.txt
 
 script:
+    - pytest
     - travis-sphinx build
 
 after_success:
